Changes to Version 3.0-11

  o boxCox() function now allows the use of any of the usual graphics parameters in the plot() function.  If particuar boxCox(model, main="my title") will add a title to the plot, and boxCox(model, main="") will suppress it.
  
  o car::Boot(object, method="residual") will work for method="residual" only if the car package has been previously attached via either library(car) or require(car).  
  
  o Added error checking with vcov. argument.  Changed vcov.boot to print a warning of bootstrap replicates that returned NA
  
  o Introduced brief.tbl(), which simply calls print(), to cope with changes to tibbles.
  
  o qqPlot() fills (shades) confidence envelopes by default, and smoothers for scatterplots fill variance (spread) envelopes by default (suggestions of Michael Friendly).
  
  o Fixed problem in infIndexPlot.influence.lme() (reported by Francis L. Huang).
  
  o New "polr" and "svyolr" methods for vif() (following report by Abra Jeffers).
  
  o Make linearHypothesis() and Anova() work with "svyolr" objects via their default methods.
  
  o Regularize handling of vcov. argument in Anova() and linearHypothesis().
  
  o New linearHypothesis.lmList() method.
  
  o New "lm" method for symbox().
  
  o New cex and pt.wts arguments for avPlot() "lm" and "glm" methods, and for mcPlot.lm().
  
  o Rewrite "embedding" vignette.
  
  o Small fixes and improvements.

Changes to Version 3.0-10

  o Fixed as error when using parameter name "(Intercept)" with deltaMethod().  
  
  o Several changes to Boot() to correct bugs, support the plinear algorithm, to correct use of weights for lm, and allow use of weights for nls.
  
  o Fix quantregLine() to work with development version 5.69 of quantreg package (following heads-up from Roger Koenker).
  
Changes to Version 3.0-9
  